--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -2,6 +2,6 @@
     <qresource prefix="/res">
         <file>render/plain.vsh</file>
         <file>render/plain.fsh</file>
-        <file>script/test.py</file>
+        <file>script/plugins.py</file>
     </qresource>
 </RCC>
