--- a/res/res.qrc
+++ b/res/res.qrc
@@ -1,9 +1,10 @@
 <RCC>
-    <qresource prefix="/res">
+    <qresource prefix="/">
         <file>render/flat.vsh</file>
         <file>render/flat.fsh</file>
         <file>script/plugins.py</file>
         <file>render/plain.fsh</file>
         <file>render/plain.vsh</file>
+        <file>icons/drawing.svg</file>
     </qresource>
 </RCC>
